--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
+<meta http-equiv="refresh" content="0;url=/en/" />
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to Astro. main pages">
 	<main>
 		<svg
 			class="astro-a"
