--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
+import LanguagePicker from '../components/LanguagePicker.astro';
+
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
-<meta http-equiv="refresh" content="0;url=/en/" />
-
+<!--  <meta http-equiv="refresh" content="0;url=/en/" /> -->
 <Layout title="Welcome to Astro. main pages">
+	
+
 	<main>
+
 		<svg
 			class="astro-a"
 			width="495"
@@ -35,6 +39,7 @@ import Card from '../components/Card.astro';
 			</defs>
 		</svg>
 		<h1>Welcome to <span class="text-gradient">Mahmoud Zareef website main page</span></h1>
+
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
@@ -60,10 +65,19 @@ import Card from '../components/Card.astro';
 				title="Community"
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
+			<Card
+			href="https://astro.build/chat/"
+			title="Community"
+			body="Come say hi to our amazing Discord community. ❤️"
+			<slot />
+	<LanguagePicker />
+		/>
+
+			
+
 		</ul>
 	</main>
 </Layout>
-
 <style>
 	main {
 		margin: auto;
